# spin-compose

./: README.md  build-py.sh  build.sh  tests.restbook
api/: Cargo.toml  spin.toml  tests.restbook
api/src/: bindings.rs  lib.rs  registrations.rs
api/wit/: world.wit
consumer/: Cargo.toml  spin.toml
consumer-py/: app.py  requirements.txt  spin.toml
consumer-py/consumer/: __init__.py
consumer-py/consumer/exports/: __init__.py
consumer-py/consumer/imports/: environment.py  exit.py  insecure.py  insecure_seed.py  instance_network.py  ip_name_lookup.py  key_value.py  llm.py  mysql.py  network.py  outgoing_handler.py  postgres.py  preopens.py  random.py  redis.py  sqlite.py  stderr.py  stdin.py  stdout.py  streams.py  tcp.py  tcp_create_socket.py  terminal_input.py  terminal_output.py  terminal_stderr.py  terminal_stdin.py  terminal_stdout.py  types.py  udp.py  udp_create_socket.py  variables.py  verify.py  wall_clock.py
consumer-py/wit/: world.wit
consumer/src/: bindings.rs  lib.rs
hmac/src/: bindings.rs  lib.rs
obfuscate/: Cargo.toml
obfuscate/src/: bindings.rs  lib.rs
obfuscate/wit/: world.wit
