[package]
name = "api"
authors = ["Thorsten Hans <thorsten.hans@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = "2.2"
wit-bindgen = "0.19.1"


[workspace]

[package.metadata.component]
package = "fermyon:samples"

[package.metadata.component.target.dependencies]
"fermyon:components" = { path = "../obfuscate/wit" }
